# image_processor

./: CMakeLists.txt  Image.cpp  Image.h  crop_filter.cpp  crop_filter.h  edge_detection.cpp  edge_detection.h  exceptions.cpp  exceptions.h  filter.h  gaussian_blur.cpp  gaussian_blur.h  grayscale_filter.cpp  grayscale_filter.h  image_processor.cpp  matrix_filter.cpp  matrix_filter.h  negative_filter.cpp  negative_filter.h  parser.cpp  parser.h  reader.cpp  reader.h  readme.md  sharp.cpp  sharp.h  writer.cpp  writer.h
